--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+alembic==1.2.1
 astroid==2.3.1
 attrs==19.2.0
 backcall==0.1.0
+bcolz==0.12.1
 bleach==3.1.0
+Bottleneck==1.2.1
 certifi==2019.9.11
 chardet==3.0.4
+Click==7.0
 colorama==0.4.1
+contextlib2==0.6.0
 cycler==0.10.0
+cyordereddict==1.0.0
+Cython==0.29.13
 decorator==4.4.0
 defusedxml==0.6.0
+empyrical==0.5.3
 entrypoints==0.3
 idna==2.8
+intervaltree==3.0.2
 ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
@@ -24,19 +33,27 @@ jupyter-console==6.0.0
 jupyter-core==4.5.0
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
+Logbook==1.5.2
+lru-dict==1.1.6
 lxml==4.4.1
+Mako==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
 mistune==0.8.4
+mock==3.0.5
+multipledispatch==0.6.0
 nbconvert==5.6.0
 nbformat==4.4.0
+networkx==1.11
 notebook==6.0.1
+numexpr==2.7.0
 numpy==1.17.2
-pandas==0.25.1
+pandas==0.22.0
 pandas-datareader==0.8.1
 pandocfilters==1.4.2
 parso==0.5.1
+patsy==0.5.1
 pickleshare==0.7.5
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
@@ -45,18 +62,26 @@ pylint==2.4.2
 pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
+python-editor==1.0.4
 pytz==2019.2
 pywin32==225
 pywinpty==0.5.5
 pyzmq==18.1.0
 qtconsole==4.5.5
 requests==2.22.0
+requests-file==1.4.3
 scipy==1.3.1
 Send2Trash==1.5.0
 six==1.12.0
+sortedcontainers==2.1.0
+SQLAlchemy==1.3.10
+statsmodels==0.10.1
+tables==3.5.2
 terminado==0.8.2
 testpath==0.4.2
+toolz==0.10.0
 tornado==6.0.3
+trading-calendars==1.10.0
 traitlets==4.3.3
 typed-ast==1.4.0
 urllib3==1.25.6
@@ -64,3 +89,4 @@ wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.5.1
 wrapt==1.11.2
+zipline==1.3.0
