--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,90 @@
-alembic==1.2.1
-astroid==2.3.1
-attrs==19.2.0
-backcall==0.1.0
-bcolz==0.12.1
-bleach==3.1.0
-Bottleneck==1.2.1
-certifi==2019.9.11
+aniso8601==9.0.1
+anyio==3.6.2
+asttokens==2.2.1
+backcall==0.2.0
+beautifulsoup4==4.6.0
+certifi==2023.5.7
 chardet==3.0.4
-Click==7.0
-colorama==0.4.1
-contextlib2==0.6.0
-cycler==0.10.0
-cyordereddict==1.0.0
-Cython==0.29.13
-decorator==4.4.0
-defusedxml==0.6.0
-empyrical==0.5.3
-entrypoints==0.3
-idna==2.8
-intervaltree==3.0.2
-ipykernel==5.1.2
-ipython==7.8.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isort==4.3.21
-jedi==0.15.1
-Jinja2==2.10.3
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.5.0
-kiwisolver==1.1.0
-lazy-object-proxy==1.4.2
-Logbook==1.5.2
-lru-dict==1.1.6
-lxml==4.4.1
-Mako==1.1.0
-MarkupSafe==1.1.1
-matplotlib==3.1.1
-mccabe==0.6.1
-mistune==0.8.4
-mock==3.0.5
-multipledispatch==0.6.0
-nbconvert==5.6.0
-nbformat==4.4.0
-networkx==1.11
-notebook==6.0.1
-numexpr==2.7.0
-numpy==1.17.2
-pandas==0.22.0
-pandas-datareader==0.8.1
-pandocfilters==1.4.2
-parso==0.5.1
-patsy==0.5.1
+click==8.1.3
+colorama==0.4.6
+comm==0.1.3
+contourpy==1.0.7
+cycler==0.11.0
+Cython==0.29.14
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+finance-datareader==0.9.50
+Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-RESTful==0.3.9
+fonttools==4.39.3
+gensim==3.8.3
+h11==0.14.0
+httpcore==0.17.0
+httpx==0.24.0
+idna==2.10
+importlib-metadata==6.6.0
+importlib-resources==5.12.0
+ipykernel==6.23.0
+ipython==8.12.2
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.0.0
+joblib==0.15.1
+JPype1==1.2.0
+jupyter_client==8.2.0
+jupyter_core==5.3.0
+kiwisolver==1.4.4
+kochat==1.0.3
+kocrawl==1.0.9
+konlpy==0.5.2
+lxml==4.9.2
+MarkupSafe==2.1.2
+matplotlib==3.2.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.18.5
+oauthlib==3.2.2
+OpenDartReader==0.2.3
+packaging==23.1
+pandas==1.0.4
+parso==0.8.3
 pickleshare==0.7.5
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-Pygments==2.4.2
-pylint==2.4.2
-pyparsing==2.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
-python-editor==1.0.4
-pytz==2019.2
-pywin32==225
-pywinpty==0.5.5
-pyzmq==18.1.0
-qtconsole==4.5.5
-requests==2.22.0
-requests-file==1.4.3
-scipy==1.3.1
-Send2Trash==1.5.0
-six==1.12.0
-sortedcontainers==2.1.0
-SQLAlchemy==1.3.10
-statsmodels==0.10.1
-tables==3.5.2
-terminado==0.8.2
-testpath==0.4.2
-toolz==0.10.0
-tornado==6.0.3
-trading-calendars==1.10.0
-traitlets==4.3.3
-typed-ast==1.4.0
-urllib3==1.25.6
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-wrapt==1.11.2
-zipline==1.3.0
+Pillow==9.5.0
+platformdirs==3.5.1
+prompt-toolkit==3.0.38
+psutil==5.9.5
+pure-eval==0.2.2
+Pygments==2.15.1
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-telegram-bot==20.3
+pytorch-crf==0.7.2
+pytz==2023.3
+pywin32==306
+pyzmq==25.0.2
+requests==2.24.0
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+scikit-learn==0.23.1
+scipy==1.9.3
+six==1.16.0
+smart-open==6.3.0
+sniffio==1.3.0
+stack-data==0.6.2
+threadpoolctl==3.1.0
+torch==1.13.1+cu116
+torchaudio==0.13.1+cu116
+torchvision==0.14.1+cu116
+tornado==6.3.2
+tqdm==4.65.0
+traitlets==5.9.0
+tweepy==3.10.0
+typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==1.25.11
+wcwidth==0.2.6
+Werkzeug==2.3.4
+zipp==3.15.0
